// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body content can be rendered 1`] = `
<div>
  <div
    class="content-body"
  >
    <p>
      Test render
    </p>
  </div>
</div>
`;

exports[`Body content snapshot 1`] = `
<div>
  <div
    class="content-body"
  >
    <p />
  </div>
</div>
`;
